--- a/MusebotSite/spotipyauth/templates/spotipyauth/sign-in.html
+++ b/MusebotSite/spotipyauth/templates/spotipyauth/sign-in.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <div class="container">
+    <p>You can exit this page</p>
     <article id="main">
     <ol>
         {% for i in results %}
